--- a/requirements.txt
+++ b/requirements.txt
@@ -1,77 +1,6 @@
-alembic==1.13.2
-aniso8601==9.0.1
-astroid==3.2.2
-black==24.4.2
-blinker==1.8.2
-cachetools==5.3.3
-certifi==2024.6.2
-charset-normalizer==3.3.2
-click==8.1.7
-cloudpickle==3.0.0
-contourpy==1.1.1
-cycler==0.12.1
-Deprecated==1.2.14
-dill==0.3.8
-docker==7.1.0
-entrypoints==0.4
-exceptiongroup==1.2.1
-flask==3.0.3
-fonttools==4.53.0
-gitdb==4.0.11
-GitPython==3.1.43
-graphene==3.3
-graphql-core==3.2.3
-graphql-relay==3.2.0
-greenlet==3.0.3
-gunicorn==22.0.0
-idna==3.7
-importlib-metadata==7.2.1
-importlib-resources==6.4.0
-iniconfig==2.0.0
-isort==5.13.2
-itsdangerous==2.2.0
-jinja2==3.1.4
-joblib==1.4.2
-kiwisolver==1.4.5
-Mako==1.3.5
-Markdown==3.6
-MarkupSafe==2.1.5
-matplotlib==3.7.5
-mccabe==0.7.0
-mlflow==2.14.1
-mypy-extensions==1.0.0
-numpy==1.24.4
-opentelemetry-api==1.25.0
-opentelemetry-sdk==1.25.0
-opentelemetry-semantic-conventions==0.46b0
-packaging==24.1
-pandas==2.0.3
-pathspec==0.12.1
-pillow==10.3.0
-platformdirs==4.2.2
-pluggy==1.5.0
-protobuf==4.25.3
-pyarrow==15.0.2
-pylint==3.2.4
-pyparsing==3.1.2
-pytest==8.2.2
-python-dateutil==2.9.0.post0
-pytz==2024.1
-PyYAML==6.0.1
-querystring-parser==1.2.4
-requests==2.32.3
-scikit-learn==1.3.2
-scipy==1.10.1
-six==1.16.0
-smmap==5.0.1
-SQLAlchemy==2.0.31
-sqlparse==0.5.0
-threadpoolctl==3.5.0
-tomli==2.0.1
-tomlkit==0.12.5
-typing-extensions==4.12.2
-tzdata==2024.1
-urllib3==2.2.2
-werkzeug==3.0.3
-wrapt==1.16.0
-zipp==3.19.2
+pylint
+black
+pytest
+pytest-cov
+numpy
+mkdocs
