--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -20,9 +20,10 @@ jobs:
 
     - name: Install dependencies
       run: |
-        pip install mkdocs
-        pip install mkdocs-material
-        pip install mkdocstrings
+        pip install mkdocs==1.6.0
+        pip install mkdocs-material==9.5.27
+        pip install mkdocstrings[python]
+
 
     - name: Build the site
       run: mkdocs build
