--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,56 @@
-pylint
-black
-pytest
-pytest-cov
-numpy
-mkdocs
-mkdocstrings
-mkdocs-material
+astroid==3.2.2
+astunparse==1.6.3
+Babel==2.15.0
+black==24.4.2
+certifi==2024.6.2
+charset-normalizer==3.3.2
+click==8.1.7
+colorama==0.4.6
+coverage==7.5.4
+dill==0.3.8
+exceptiongroup==1.2.1
+ghp-import==2.1.0
+griffe==0.47.0
+idna==3.7
+importlib-metadata==8.0.0
+iniconfig==2.0.0
+isort==5.13.2
+jinja2==3.1.4
+Markdown==3.6
+markdown-callouts==0.4.0
+MarkupSafe==2.1.5
+mccabe==0.7.0
+mergedeep==1.3.4
+mkdocs==1.6.0
+mkdocs-autorefs==1.0.1
+mkdocs-get-deps==0.2.0
+mkdocs-material==9.5.27
+mkdocs-material-extensions==1.3.1
+mkdocstrings==0.25.1
+mkdocstrings-crystal==0.3.7
+mkdocstrings-python==1.10.5
+mypy-extensions==1.0.0
+numpy==1.24.4
+packaging==24.1
+paginate==0.5.6
+pathspec==0.12.1
+platformdirs==4.2.2
+pluggy==1.5.0
+pygments==2.18.0
+pylint==3.2.5
+pymdown-extensions==10.8.1
+pytest==8.2.2
+pytest-cov==5.0.0
+python-dateutil==2.9.0.post0
+pytz==2024.1
+PyYAML==6.0.1
+pyyaml-env-tag==0.1
+regex==2024.5.15
+requests==2.32.3
+six==1.16.0
+tomli==2.0.1
+tomlkit==0.12.5
+typing-extensions==4.12.2
+urllib3==2.2.2
+watchdog==4.0.1
+zipp==3.19.2
